--- a/server.yml
+++ b/server.yml
@@ -58,8 +58,8 @@ Resources:
       SecurityGroupIngress:
       - CidrIp: 0.0.0.0/0
         IpProtocol: tcp
-        FromPort: 22
-        ToPort: 22
+        #FromPort: 22
+        #ToPort: 22
       Tags:
         - Key: Name
           Value: !Sub "${EnvironmentName} Bastion Security Group"
